--- a/src/pages/room/RoomListPage.css
+++ b/src/pages/room/RoomListPage.css
@@ -293,24 +293,33 @@
 
 .main-content .modal {
   z-index: 1050;
+  opacity: 0.7;
+  pointer-events: none;
 }
 
-/* =========================
-   Custom modal backdrop
-   ========================= */
-.custom-modal-backdrop {
+/* Global modal for body container */
+.modal {
   position: fixed;
   top: 0;
-  left: 240px;
-  width: calc(100vw - 240px);
-  height: 100vh;
-  background-color: rgba(255, 255, 255, 0.5);
-  z-index: 900;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+}
+
+.modal-content {
+  opacity: 1;
+  width: auto;
+  border: none;
+  box-shadow: none;
 }
 
 /* =========================
    Modal adjustments
    ========================= */
-.main-content .modal-dialog {
-  margin-top: 100px;
+.modal-dialog {
+  margin: 0;
 }
